--- a/proposal.html
+++ b/proposal.html
@@ -29,7 +29,7 @@
 <h1 class="title">Real-Time Atmospheric Scattering</h1>
 </header>
 <figure>
-<img src="images/atmosphere_from_planet.jpg" width="600"
+<img src="images/atmosphere_from_planet.jpg" width="800"
 alt="Description of image" />
 <figcaption aria-hidden="true">Description of image</figcaption>
 </figure>
@@ -39,11 +39,28 @@ atmospheric scattering, allowing users to explore the various phenomena
 associated with the scattering of light in the Earth’s atmosphere such
 as Rayleigh scattering, Mie scattering, the resulting colors of the sky
 and various atmospheric optical effects.</p>
-<h1 id="goals-and-deliverables">Goals and Deliverables</h1>
-<p>## Goals: - Sky color gradient: Implement a smooth gradient
-demonstrating the color changes of the sky due to atmospheric scattering
-at various times of the day.</p>
+
+<img src="images/img2.jpg" width="400"/>
+
+<img src="images/img3.jpg" width="500"
+alt="Description of image" />
+
 <ul>
+</ul>
+
+<img src="images/img4.jpg" width="400"
+alt="Description of image" />
+
+<img src="images/img5.jpg" width="500"
+alt="Description of image" />
+
+
+<h1 id="goals-and-deliverables">Goals and Deliverables</h1>
+<h2 id="goals">Goals:</h2>
+<ul>
+<li><p>Sky color gradient: Implement a smooth gradient demonstrating the
+color changes of the sky due to atmospheric scattering at various times
+of the day.</p></li>
 <li><p>The Tyndall effect: Visualize the scattering of sunlight by small
 particles in the air, which causes the sky to appear blue.</p></li>
 <li><p>Sunset and sunrise: Display the vibrant colors resulting from the
@@ -109,9 +126,10 @@ on the algorithms implemented during week 1.</li>
 <li>Integrate the UI with the 3D visualization in Unity.</li>
 <li>Start working on optional features.</li>
 </ul>
-<p>## Week 4 (19 May - 26 May): - Continue working on the optional
-features. - Test and debug the project. - Address any unexpected issues
-or problems during the implementation phase.</p>
+<h2 id="week-3-19-may---26-may">Week 4 (19 May - 26 May):</h2>
+<li>Continue working on the optional features.</li>
+<li>Test and debug the project.</li>
+<li>Address any unexpected issues or problems during the implementation phase.</li>
 <h2 id="week-5-26-may---2-june-final-week">Week 5 (26 May - 2 June)
 (Final Week):</h2>
 <ul>
@@ -120,17 +138,16 @@ or problems during the implementation phase.</p>
 </ul>
 <h1 id="resources">Resources</h1>
 <p>[1] Nishita 1993, Display of The Earth Taking into Account
-Atmospheric Scattering -
-http://nishitalab.org/user/nis/cdrom/sig93_nis.pdf</p>
+Atmospheric Scattering -<a href="url">http://nishitalab.org/user/nis/cdrom/sig93_nis.pdf</a></p>
 <p>[2] O’Neil, Accurate Atmospheric Scattering -
-https://developer.nvidia.com/gpugems/gpugems2/part-ii-shading-lighting-and-shadows/chapter-16-accurate-atmospheric-scattering</p>
+  <a href="url">https://developer.nvidia.com/gpugems/gpugems2/part-ii-shading-lighting-and-shadows/chapter-16-accurate-atmospheric-scattering</a></p>
 <p>[3] Bruneton &amp; Neyret 2008, Precomputed Atmospheric Scattering -
-https://hal.inria.fr/inria-00288758/document</p>
+  <a href="url">https://hal.inria.fr/inria-00288758/document</a></p>
 <p>[4] Angular Diameter -
-https://www.astronomy.swin.edu.au/cosmos/A/Angular+Diameter</p>
+  <a href="url">https://www.astronomy.swin.edu.au/cosmos/A/Angular+Diameter</a></p>
 <p>[5] A Qualitative and Quantitative Evaluation of 8 Clear Sky Models -
-https://arxiv.org/pdf/1612.04336.pdf</p>
+  <a href="url">https://arxiv.org/pdf/1612.04336.pdf</a></p>
 <p>[6] Spectral rendering -
-https://en.wikipedia.org/wiki/Spectral_rendering</p>
+  <a href="url">https://en.wikipedia.org/wiki/Spectral_rendering</a></p>
 </body>
 </html>
