--- a/proposal.html
+++ b/proposal.html
@@ -48,16 +48,22 @@ alt="Description of image" />
 <ul>
 </ul>
 
-<img src="images/img4.jpg" width="400"
+<img src="images/img4.jpg" width="500"
 alt="Description of image" />
 
-<img src="images/img5.jpg" width="500"
+<img src="images/img5.jpg" width="400"
 alt="Description of image" />
 
 
 <h1 id="goals-and-deliverables">Goals and Deliverables</h1>
 <h2 id="goals">Goals:</h2>
 <ul>
+ <p> The primary objective of this project is to create a realistic and 
+interactive 3D visualization of atmospheric scattering,
+allowing users to explore various scattering phenomena and their 
+effects on sky color and atmospheric optical effects. 
+To achieve this, we have identified several key goals that will guide 
+the development of our visualization:</p>
 <li><p>Sky color gradient: Implement a smooth gradient demonstrating the
 color changes of the sky due to atmospheric scattering at various times
 of the day.</p></li>
