Update description of image

--- a/proposal.html
+++ b/proposal.html
@@ -30,7 +30,7 @@
 </header>
 <figure>
 <img src="images/atmosphere_from_planet.jpg" width="800"
-alt="Description of image" />
+alt="atmosphere from planet" />
 <figcaption aria-hidden="true">Description of image</figcaption>
 </figure>
 <h1 id="title-and-summary">Title and Summary</h1>
