--- a/proposal.html
+++ b/proposal.html
@@ -142,6 +142,26 @@ on the algorithms implemented during week 1.</li>
 <li>Prepare documentation and presentation.</li>
 <li>Write the final report.</li>
 </ul>
+<h1 id="Milestone Report">Milestone Report</h1>
+<img src="images/milestone_img.png" width="800"/>
+<ul>
+
+<li>Initially, we faced several challenges in utilizing the Unity engine due to our unfamiliarity with it. 
+  However, since then our progress has noticeably improved and we feel more confortable with the engine.</li>
+<li>We have Incorporated celestial bodies such as planets, moons, and a sun.</li>
+<li>We have applied corresponding textures to these entities for both daytime and nighttime scenarios.</li>
+<li>We've developed scripts to emulate the movement of these celestial bodies and ensure the camera effectively tracks each planet. </li>
+<li>We have created a shaders to facilitate ray scattering. While we have developed the necessary auxiliary functions for implementation, 
+  we are still refining our understanding of its proper implementation.</li>
+<li>Given the consideration of our timeline, we have determined that the inclusion of procedural planets
+  would consume a substantial amount of time that we unfortunately lack. 
+</li>
+<li>We have elected to incorporate a flight simulator by creating a model 'spaceship' and developing a script that enables movement within the solar system.</li>
+<li>We are in the process of designing a user interface for interaction with the properties of the atmosphere.</li>
+
+</ul>
+
+</ul>
 <h1 id="resources">Resources</h1>
 <p>[1] Nishita 1993, Display of The Earth Taking into Account
 Atmospheric Scattering -<a href="url">http://nishitalab.org/user/nis/cdrom/sig93_nis.pdf</a></p>
@@ -155,5 +175,7 @@ Atmospheric Scattering -<a href="url">http://nishitalab.org/user/nis/cdrom/sig93
   <a href="url">https://arxiv.org/pdf/1612.04336.pdf</a></p>
 <p>[6] Spectral rendering -
   <a href="url">https://en.wikipedia.org/wiki/Spectral_rendering</a></p>
+
+
 </body>
 </html>
