Add result image for procedural planets

--- a/final_report.html
+++ b/final_report.html
@@ -248,10 +248,16 @@
 
   <h1 id="Results">Results</h1>
 
-  <img src="images/result1.png" width="400" alt="" />
-
+  <img src="images/result_1.png" width="400" alt="" />
 
   <h1 id="Contributions">Contributions</h1>
+  <ul>
+    <li>Initially, we faced several challenges in utilizing the Unity engine due to our unfamiliarity with it.
+      However, since then our progress has noticeably improved and we feel more confortable with the engine.</li>
+  </ul>
+
+
+  <h1 id="General comments">General comments</h1>
   <ul>
     <li>Initially, we faced several challenges in utilizing the Unity engine due to our unfamiliarity with it.
       However, since then our progress has noticeably improved and we feel more confortable with the engine.</li>
