Add Scattering images to result

--- a/final_report.html
+++ b/final_report.html
@@ -250,6 +250,10 @@
 
   <img src="images/result_1.png" width="400" alt="" />
 
+  <img src="images/result_2.png" width="400" alt="" />
+
+  <img src="images/result_3.png" width="400" alt="" />
+
   <h1 id="Contributions">Contributions</h1>
   <ul>
     <li>Initially, we faced several challenges in utilizing the Unity engine due to our unfamiliarity with it.
